fixed scrollbar(trust)

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -123,6 +123,9 @@
   max-width: 980px;
   width: 100%;
   overflow: scroll;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 }
 
 .trust__table-item {
